// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Model -> Delete helper - across nodes doDelete - deletes across nodes - all Nodes in document 1`] = `
Array [
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "621e",
      "next_sibling_id": "f677",
      "type": "p",
      "content": "First paragraph with no formats",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f677",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "Second paragraph with some formats",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "db70",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f677",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "db70",
      "next_sibling_id": "9615",
      "type": "spacer",
      "content": "",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "9615",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "db70",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "56da",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "56da",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "9615",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "56da",
      "next_sibling_id": "9fa0",
      "type": "li",
      "content": "Here's a list",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "9fa0",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "56da",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9fa0",
      "next_sibling_id": "151c",
      "type": "li",
      "content": "Another item here",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "151c",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "9fa0",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "151c",
      "next_sibling_id": "fd25",
      "type": "li",
      "content": "One with a bunch of formats and stuff",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": Immutable.Record {
                        "next": Immutable.Record {
                          "next": Immutable.Record {
                            "next": Immutable.Record {
                              "next": Immutable.Record {
                                "next": undefined,
                                "length": -1,
                                "selection-bold": false,
                                "selection-italic": false,
                                "selection-code": false,
                                "selection-siteinfo": false,
                                "selection-mini": false,
                                "selection-strikethrough": false,
                                "selection-link": true,
                                "linkUrl": "http://yep.com",
                              },
                              "length": 5,
                              "selection-bold": false,
                              "selection-italic": false,
                              "selection-code": false,
                              "selection-siteinfo": false,
                              "selection-mini": false,
                              "selection-strikethrough": false,
                              "selection-link": false,
                              "linkUrl": "",
                            },
                            "length": 7,
                            "selection-bold": false,
                            "selection-italic": false,
                            "selection-code": false,
                            "selection-siteinfo": false,
                            "selection-mini": false,
                            "selection-strikethrough": true,
                            "selection-link": false,
                            "linkUrl": "",
                          },
                          "length": 1,
                          "selection-bold": false,
                          "selection-italic": false,
                          "selection-code": false,
                          "selection-siteinfo": false,
                          "selection-mini": false,
                          "selection-strikethrough": false,
                          "selection-link": false,
                          "linkUrl": "",
                        },
                        "length": 2,
                        "selection-bold": false,
                        "selection-italic": false,
                        "selection-code": false,
                        "selection-siteinfo": true,
                        "selection-mini": false,
                        "selection-strikethrough": false,
                        "selection-link": false,
                        "linkUrl": "",
                      },
                      "length": 1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": false,
                      "linkUrl": "",
                    },
                    "length": 5,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": true,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": true,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 4,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "fd25",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "151c",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "fd25",
      "next_sibling_id": "f063",
      "type": "pre",
      "content": "var someCode = \\"here\\";",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f063",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "fd25",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "f063",
      "next_sibling_id": "61cf",
      "type": "pre",
      "content": "function getIt(sendIt) {",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "61cf",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f063",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "61cf",
      "next_sibling_id": "7a38",
      "type": "pre",
      "content": "  const yep = false;",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "7a38",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "61cf",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "7a38",
      "next_sibling_id": "43eb",
      "type": "pre",
      "content": "}",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "43eb",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "7a38",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "43eb",
      "next_sibling_id": "4add",
      "type": "pre",
      "content": "getIt();",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "4add",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "43eb",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "4add",
      "next_sibling_id": "09a0",
      "type": "image",
      "content": "",
      "meta": Immutable.Map {
        "url": "b38d29e7bbd96a4df4d7ac1fa442de358702b1635319c696f27c23c2bcc9d70d",
        "width": 669,
        "height": 1000,
        "caption": "Kinzua Dam '91",
        "rotationDegrees": 90,
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "09a0",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "4add",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "09a0",
      "next_sibling_id": "c67c",
      "type": "h2",
      "content": "Here's a big quote",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "c67c",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "09a0",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "c67c",
      "next_sibling_id": "cce3",
      "type": "quote",
      "content": "",
      "meta": Immutable.Map {
        "url": "https://www.theguardian.com/theguardian/2007/sep/13/greatinterviews",
        "quote": "It's an attempt to bring the figurative thing up on to the nervous system more violently and more poignantly.",
        "author": "Frances Bacon",
        "context": "interviews with David Sylvester in 1963, 1966 and 1979",
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "cce3",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "c67c",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "cce3",
      "next_sibling_id": null,
      "type": "p",
      "content": "",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "cce3",
      "next_sibling_id": null,
      "type": "p",
      "content": "Make sure we have a P on the end so we can delete",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "cce3",
      "type": "h1",
      "content": "",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "cce3",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`Document Model -> Delete helper - across nodes doDelete - deletes across nodes - from end of one TextType through end of another TextType 1`] = `
Array [
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "621e",
      "next_sibling_id": "f677",
      "type": "p",
      "content": "First paragraph with no formats",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f677",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "Second paragraph with some formats",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f677",
      "type": "h1",
      "content": "Large Headin",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "f677",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`Document Model -> Delete helper - across nodes doDelete - deletes across nodes 1`] = `
Array [
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "56da",
      "next_sibling_id": "9fa0",
      "type": "li",
      "content": "Here's a list",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "9fa0",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "56da",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9fa0",
      "next_sibling_id": "151c",
      "type": "li",
      "content": "Another item here",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "151c",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "9fa0",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "151c",
      "next_sibling_id": "fd25",
      "type": "li",
      "content": "One with a bunch of formats and stuff",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": Immutable.Record {
                        "next": Immutable.Record {
                          "next": Immutable.Record {
                            "next": Immutable.Record {
                              "next": Immutable.Record {
                                "next": undefined,
                                "length": -1,
                                "selection-bold": false,
                                "selection-italic": false,
                                "selection-code": false,
                                "selection-siteinfo": false,
                                "selection-mini": false,
                                "selection-strikethrough": false,
                                "selection-link": true,
                                "linkUrl": "http://yep.com",
                              },
                              "length": 5,
                              "selection-bold": false,
                              "selection-italic": false,
                              "selection-code": false,
                              "selection-siteinfo": false,
                              "selection-mini": false,
                              "selection-strikethrough": false,
                              "selection-link": false,
                              "linkUrl": "",
                            },
                            "length": 7,
                            "selection-bold": false,
                            "selection-italic": false,
                            "selection-code": false,
                            "selection-siteinfo": false,
                            "selection-mini": false,
                            "selection-strikethrough": true,
                            "selection-link": false,
                            "linkUrl": "",
                          },
                          "length": 1,
                          "selection-bold": false,
                          "selection-italic": false,
                          "selection-code": false,
                          "selection-siteinfo": false,
                          "selection-mini": false,
                          "selection-strikethrough": false,
                          "selection-link": false,
                          "linkUrl": "",
                        },
                        "length": 2,
                        "selection-bold": false,
                        "selection-italic": false,
                        "selection-code": false,
                        "selection-siteinfo": true,
                        "selection-mini": false,
                        "selection-strikethrough": false,
                        "selection-link": false,
                        "linkUrl": "",
                      },
                      "length": 1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": false,
                      "linkUrl": "",
                    },
                    "length": 5,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": true,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": true,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 4,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "fd25",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "151c",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "fd25",
      "next_sibling_id": "f063",
      "type": "pre",
      "content": "var someCode = \\"here\\";",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "f063",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "fd25",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "f063",
      "next_sibling_id": "61cf",
      "type": "pre",
      "content": "function getIt(sendIt) {",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "61cf",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "f063",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "61cf",
      "next_sibling_id": "7a38",
      "type": "pre",
      "content": "  const yep = false;",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "7a38",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "61cf",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "7a38",
      "next_sibling_id": "43eb",
      "type": "pre",
      "content": "}",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "43eb",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "7a38",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "43eb",
      "next_sibling_id": "4add",
      "type": "pre",
      "content": "It();",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "43eb",
      "next_sibling_id": "4add",
      "type": "pre",
      "content": "getIt();",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "43eb",
      "type": "h2",
      "content": "Small ",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "43eb",
      "type": "h2",
      "content": "Small Heading",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`Document Model -> Delete helper - across nodes noop if selectedNodeId is first node in document 1`] = `
Array [
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`Document Model -> Delete helper - single node doDelete - deletes one character - selection 1`] = `
Array [
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "LargeHeading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`Document Model -> Delete helper - single node doDelete - deletes one character somewhere in middle - caret collapsed 1`] = `
Array [
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Larg Heading",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "8e34",
      "next_sibling_id": "621e",
      "type": "h1",
      "content": "Large Heading",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`Document Model -> Delete helper - single node doDelete - deletes selection from beginning 1`] = `
Array [
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "h with some formats",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "Second paragraph with some formats",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
]
`;

exports[`Document Model -> Delete helper - single node doDelete - deletes selection through end 1`] = `
Array [
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "Second paragraph",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "f677",
      "next_sibling_id": "db70",
      "type": "p",
      "content": "Second paragraph with some formats",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": undefined,
                    "length": -1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": true,
                    "linkUrl": "http://some.site",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 4,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": true,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 17,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
]
`;

exports[`doDeleteMetaType deletes a Meta Type node 1`] = `
Array [
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "4add",
      "next_sibling_id": "09a0",
      "type": "image",
      "content": "",
      "meta": Immutable.Map {
        "url": "b38d29e7bbd96a4df4d7ac1fa442de358702b1635319c696f27c23c2bcc9d70d",
        "width": 669,
        "height": 1000,
        "caption": "Kinzua Dam '91",
        "rotationDegrees": 90,
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "43eb",
      "next_sibling_id": "09a0",
      "type": "pre",
      "content": "getIt();",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "43eb",
      "next_sibling_id": "4add",
      "type": "pre",
      "content": "getIt();",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`doMerge deletes an empty Text Type node if previous node is a Meta Type 1`] = `
Array [
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9615",
      "next_sibling_id": "56da",
      "type": "h2",
      "content": "",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "db70",
      "next_sibling_id": "56da",
      "type": "spacer",
      "content": "",
      "meta": Immutable.Map {},
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "db70",
      "next_sibling_id": "9615",
      "type": "spacer",
      "content": "",
      "meta": Immutable.Map {},
    },
  },
]
`;

exports[`doMerge merges LI -> LI 1`] = `
Array [
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9fa0",
      "next_sibling_id": "151c",
      "type": "li",
      "content": "Another item hereOne with a bunch of formats and stuff",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": Immutable.Record {
                        "next": Immutable.Record {
                          "next": Immutable.Record {
                            "next": Immutable.Record {
                              "next": Immutable.Record {
                                "next": undefined,
                                "length": -1,
                                "selection-bold": false,
                                "selection-italic": false,
                                "selection-code": false,
                                "selection-siteinfo": false,
                                "selection-mini": false,
                                "selection-strikethrough": false,
                                "selection-link": true,
                                "linkUrl": "http://yep.com",
                              },
                              "length": 5,
                              "selection-bold": false,
                              "selection-italic": false,
                              "selection-code": false,
                              "selection-siteinfo": false,
                              "selection-mini": false,
                              "selection-strikethrough": false,
                              "selection-link": false,
                              "linkUrl": "",
                            },
                            "length": 7,
                            "selection-bold": false,
                            "selection-italic": false,
                            "selection-code": false,
                            "selection-siteinfo": false,
                            "selection-mini": false,
                            "selection-strikethrough": true,
                            "selection-link": false,
                            "linkUrl": "",
                          },
                          "length": 1,
                          "selection-bold": false,
                          "selection-italic": false,
                          "selection-code": false,
                          "selection-siteinfo": false,
                          "selection-mini": false,
                          "selection-strikethrough": false,
                          "selection-link": false,
                          "linkUrl": "",
                        },
                        "length": 2,
                        "selection-bold": false,
                        "selection-italic": false,
                        "selection-code": false,
                        "selection-siteinfo": true,
                        "selection-mini": false,
                        "selection-strikethrough": false,
                        "selection-link": false,
                        "linkUrl": "",
                      },
                      "length": 1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": false,
                      "linkUrl": "",
                    },
                    "length": 5,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": true,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": true,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 21,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9fa0",
      "next_sibling_id": "151c",
      "type": "li",
      "content": "Another item here",
      "meta": Immutable.Map {},
    },
  },
  Object {
    "executeState": undefined,
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "151c",
      "next_sibling_id": "fd25",
      "type": "li",
      "content": "One with a bunch of formats and stuff",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": Immutable.Record {
                        "next": Immutable.Record {
                          "next": Immutable.Record {
                            "next": Immutable.Record {
                              "next": Immutable.Record {
                                "next": undefined,
                                "length": -1,
                                "selection-bold": false,
                                "selection-italic": false,
                                "selection-code": false,
                                "selection-siteinfo": false,
                                "selection-mini": false,
                                "selection-strikethrough": false,
                                "selection-link": true,
                                "linkUrl": "http://yep.com",
                              },
                              "length": 5,
                              "selection-bold": false,
                              "selection-italic": false,
                              "selection-code": false,
                              "selection-siteinfo": false,
                              "selection-mini": false,
                              "selection-strikethrough": false,
                              "selection-link": false,
                              "linkUrl": "",
                            },
                            "length": 7,
                            "selection-bold": false,
                            "selection-italic": false,
                            "selection-code": false,
                            "selection-siteinfo": false,
                            "selection-mini": false,
                            "selection-strikethrough": true,
                            "selection-link": false,
                            "linkUrl": "",
                          },
                          "length": 1,
                          "selection-bold": false,
                          "selection-italic": false,
                          "selection-code": false,
                          "selection-siteinfo": false,
                          "selection-mini": false,
                          "selection-strikethrough": false,
                          "selection-link": false,
                          "linkUrl": "",
                        },
                        "length": 2,
                        "selection-bold": false,
                        "selection-italic": false,
                        "selection-code": false,
                        "selection-siteinfo": true,
                        "selection-mini": false,
                        "selection-strikethrough": false,
                        "selection-link": false,
                        "linkUrl": "",
                      },
                      "length": 1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": false,
                      "linkUrl": "",
                    },
                    "length": 5,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": true,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": true,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 4,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
  Object {
    "executeState": Immutable.Map {
      "post_id": 175,
      "id": "9fa0",
      "next_sibling_id": "fd25",
      "type": "li",
      "content": "Another item hereOne with a bunch of formats and stuff",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": Immutable.Record {
                        "next": Immutable.Record {
                          "next": Immutable.Record {
                            "next": Immutable.Record {
                              "next": Immutable.Record {
                                "next": undefined,
                                "length": -1,
                                "selection-bold": false,
                                "selection-italic": false,
                                "selection-code": false,
                                "selection-siteinfo": false,
                                "selection-mini": false,
                                "selection-strikethrough": false,
                                "selection-link": true,
                                "linkUrl": "http://yep.com",
                              },
                              "length": 5,
                              "selection-bold": false,
                              "selection-italic": false,
                              "selection-code": false,
                              "selection-siteinfo": false,
                              "selection-mini": false,
                              "selection-strikethrough": false,
                              "selection-link": false,
                              "linkUrl": "",
                            },
                            "length": 7,
                            "selection-bold": false,
                            "selection-italic": false,
                            "selection-code": false,
                            "selection-siteinfo": false,
                            "selection-mini": false,
                            "selection-strikethrough": true,
                            "selection-link": false,
                            "linkUrl": "",
                          },
                          "length": 1,
                          "selection-bold": false,
                          "selection-italic": false,
                          "selection-code": false,
                          "selection-siteinfo": false,
                          "selection-mini": false,
                          "selection-strikethrough": false,
                          "selection-link": false,
                          "linkUrl": "",
                        },
                        "length": 2,
                        "selection-bold": false,
                        "selection-italic": false,
                        "selection-code": false,
                        "selection-siteinfo": true,
                        "selection-mini": false,
                        "selection-strikethrough": false,
                        "selection-link": false,
                        "linkUrl": "",
                      },
                      "length": 1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": false,
                      "linkUrl": "",
                    },
                    "length": 5,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": true,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": true,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 21,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
    "unexecuteState": Immutable.Map {
      "post_id": 175,
      "id": "9fa0",
      "next_sibling_id": "151c",
      "type": "li",
      "content": "Another item hereOne with a bunch of formats and stuff",
      "meta": Immutable.Map {
        "selections": Immutable.Record {
          "next": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": Immutable.Record {
                        "next": Immutable.Record {
                          "next": Immutable.Record {
                            "next": Immutable.Record {
                              "next": Immutable.Record {
                                "next": undefined,
                                "length": -1,
                                "selection-bold": false,
                                "selection-italic": false,
                                "selection-code": false,
                                "selection-siteinfo": false,
                                "selection-mini": false,
                                "selection-strikethrough": false,
                                "selection-link": true,
                                "linkUrl": "http://yep.com",
                              },
                              "length": 5,
                              "selection-bold": false,
                              "selection-italic": false,
                              "selection-code": false,
                              "selection-siteinfo": false,
                              "selection-mini": false,
                              "selection-strikethrough": false,
                              "selection-link": false,
                              "linkUrl": "",
                            },
                            "length": 7,
                            "selection-bold": false,
                            "selection-italic": false,
                            "selection-code": false,
                            "selection-siteinfo": false,
                            "selection-mini": false,
                            "selection-strikethrough": true,
                            "selection-link": false,
                            "linkUrl": "",
                          },
                          "length": 1,
                          "selection-bold": false,
                          "selection-italic": false,
                          "selection-code": false,
                          "selection-siteinfo": false,
                          "selection-mini": false,
                          "selection-strikethrough": false,
                          "selection-link": false,
                          "linkUrl": "",
                        },
                        "length": 2,
                        "selection-bold": false,
                        "selection-italic": false,
                        "selection-code": false,
                        "selection-siteinfo": true,
                        "selection-mini": false,
                        "selection-strikethrough": false,
                        "selection-link": false,
                        "linkUrl": "",
                      },
                      "length": 1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": false,
                      "linkUrl": "",
                    },
                    "length": 5,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": true,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 1,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": false,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": true,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 1,
              "selection-bold": false,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 4,
            "selection-bold": true,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
          "length": 21,
          "selection-bold": false,
          "selection-italic": false,
          "selection-code": false,
          "selection-siteinfo": false,
          "selection-mini": false,
          "selection-strikethrough": false,
          "selection-link": false,
          "linkUrl": "",
        },
      },
    },
  },
]
`;
